[package]
edition = "2021"
name = "rnr"
version = "0.1.0"
[dependencies]
indented = "0.1.0"
proc-macro2 = {version= "1.0.69",features=["span-locations"]}
quote = "1.0.33"
regex = "1.10.2"
structopt = "0.3.26"
ansi_term = "0.12.1"
mips = { path = "../mips" }
strip-ansi-escapes = "0.2.0"

[dependencies.syn]
features = ["full", "extra-traits"]
version = "2.0.39"
